cleaned up codebase

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,13 @@
   font-family: 'Roboto', sans-serif;
 }
 
-#Path_39 {
+#envelopee {
   animation: 1s infinite linear;
   transform-origin: center;
   transform-box: fill-box;
 }
 
-@keyframes path {
+@keyframes envelopee {
   from {
     transform: rotatez(0deg);
   }
